atualizacoes de server

--- a/public/protocolo.html
+++ b/public/protocolo.html
@@ -53,12 +53,19 @@
 
             <div class="caixa_resultado_consulta">    
                 <h2 class="resultado_consulta"></h2>
+                <textarea id="campo_mensagem_alterar" placeholder="Adicione uma mensagem para alterar" class="input_mensagem_alterar"></textarea>
+                <div class="botoes_alteracao">
+                <button class="botao_principal" id="btn_alterar">Alterar Mensagem</button>
                 <button class="botao_principal" id="btn_apagar">Apagar Cliente</button>
+            </div>
             </div>
         </div>
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+        <p class="mensagem_rodape">Desenvolvido por Atentus Cloud</p>
+        <p class="mensagem_rodape" href="https://atentus.cloud">https://atentus.cloud</p>
+    </footer>
 
     <script src="app.js"></script>
 </body>
